--- a/project.json
+++ b/project.json
@@ -4,7 +4,8 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[25.8.0]"
+    "UiPath.System.Activities": "[25.8.0]",
+    "UiPath.UIAutomation.Activities": "[25.10.13]"
   },
   "webServices": [],
   "entitiesStores": [],
